Java 8 Compatible In More Ways